Updated README.md and the Web.config as both were quite stale.

--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -18,16 +18,25 @@
   </configSections>
 
   <openLawOffice>
-    <fileStorage currentVersionPath="E:\Temp\Current\" previousVersionsPath="E:\Temp\Previous\" tempPath="E:\Temp\Temp\" />
+    <fileStorage mattersPath="C:\Temp\"
+                 clientsPath="C:\Temp\"
+                 jurisdictionsPath="C:\Temp\" />
 
     <!-- If you look here for my email, you won't get me, I never check this.-->
-    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com" 
-            passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" 
-            websiteUrl="http://localhost:62914/" 
-            office365AuthEndpoint="" 
-            office365TokenEndpoint="" 
-            office365ClientId="" 
-            office365ClientKey="">
+    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com"
+            passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com"
+            websiteUrl="http://localhost:62914/"
+            office365AuthEndpoint=""
+            office365TokenEndpoint=""
+            office365ClientId=""
+            office365ClientKey=""
+            billingFirmName="Nodine Legal, LLC"
+            billingFirmAddress="PO Box 1125"
+            billingFirmCity="Parsons"
+            billingFirmState="KS"
+            billingFirmZip="67357"
+            billingFirmPhone="(620) 717-7668"
+            billingFirmWeb="www.nodinelegal.com">
       <globalTaskTagFilters>
         <tagFilter name="tag1" category="Active" tag="Yes" />
       </globalTaskTagFilters>
@@ -35,7 +44,7 @@
   </openLawOffice>
 
   <connectionStrings>
-    <add name="Postgres" providerName="Npgsql" connectionString="server=192.168.11.21;Port=5432;Database=olo_Development;User Id=dev;Password=dev;" />
+    <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=olo_1;User Id=postgres;Password=postgres;" />
   </connectionStrings>
 
   <system.data>
