--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -20,7 +20,8 @@
   <openLawOffice>
     <fileStorage mattersPath="C:\Temp\"
                  clientsPath="C:\Temp\"
-                 jurisdictionsPath="C:\Temp\" />
+                 jurisdictionsPath="C:\Temp\"
+                 formsPath="C:\Temp\Forms\"/>
 
     <!-- If you look here for my email, you won't get me, I never check this.-->
     <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com"
