--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Controllers\ExpensesController.cs" />
     <Compile Include="Controllers\FeesController.cs" />
     <Compile Include="Controllers\FormFieldsController.cs" />
+    <Compile Include="Controllers\FormsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InstallationController.cs" />
     <Compile Include="Controllers\InvoicesController.cs" />
@@ -122,6 +123,7 @@
     <Compile Include="Controllers\MatterContactController.cs" />
     <Compile Include="Controllers\MattersController.cs" />
     <Compile Include="Controllers\MatterTagsController.cs" />
+    <Compile Include="Controllers\MatterTypesController.cs" />
     <Compile Include="Controllers\NotesController.cs" />
     <Compile Include="Controllers\ResponsibleUsersController.cs" />
     <Compile Include="Controllers\SearchController.cs" />
@@ -183,6 +185,7 @@
     <Compile Include="ViewModels\Documents\SelectableDocumentViewModel.cs" />
     <Compile Include="ViewModels\Documents\VersionViewModel.cs" />
     <Compile Include="FormsAuthenticationService.cs" />
+    <Compile Include="ViewModels\Forms\FormViewModel.cs" />
     <Compile Include="ViewModels\Forms\FormFieldMatterViewModel.cs" />
     <Compile Include="ViewModels\Forms\FormFieldViewModel.cs" />
     <Compile Include="ViewModels\Home\DashboardViewModel.cs" />
@@ -194,6 +197,7 @@
     <Compile Include="ViewModels\Matters\MatterContactViewModel.cs" />
     <Compile Include="ViewModels\Matters\MatterTagViewModel.cs" />
     <Compile Include="ViewModels\Matters\MatterTimeViewModel.cs" />
+    <Compile Include="ViewModels\Matters\MatterTypeViewModel.cs" />
     <Compile Include="ViewModels\Matters\MatterViewModel.cs" />
     <Compile Include="ViewModels\Matters\ResponsibleUserViewModel.cs" />
     <Compile Include="ViewModels\Notes\NoteViewModel.cs" />
@@ -365,6 +369,11 @@
     <Content Include="Views\FormFields\Details.aspx" />
     <Content Include="Views\FormFields\Edit.aspx" />
     <Content Include="Views\FormFields\Index.aspx" />
+    <Content Include="Views\Forms\Create.aspx" />
+    <Content Include="Views\Forms\Delete.aspx" />
+    <Content Include="Views\Forms\Details.aspx" />
+    <Content Include="Views\Forms\Edit.aspx" />
+    <Content Include="Views\Forms\Index.aspx" />
     <Content Include="Views\Invoices\GroupDetails.aspx" />
     <Content Include="Views\Invoices\GroupPrint_Full.aspx" />
     <Content Include="Views\Invoices\GroupPrint_Summary.aspx" />
@@ -379,6 +388,11 @@
     <Content Include="Views\Matters\Timesheet_Print3rdParty.aspx" />
     <Content Include="Views\Matters\Timesheet_PrintClient.aspx" />
     <Content Include="Views\Matters\Timesheet_PrintInternal.aspx" />
+    <Content Include="Views\MatterTypes\Create.aspx" />
+    <Content Include="Views\MatterTypes\Delete.aspx" />
+    <Content Include="Views\MatterTypes\Details.aspx" />
+    <Content Include="Views\MatterTypes\Edit.aspx" />
+    <Content Include="Views\MatterTypes\Index.aspx" />
     <Content Include="Views\Shared\CoreDetailsView.ascx" />
     <Content Include="Views\Shared\Errors\Index.aspx" />
     <Content Include="Views\Shared\Errors\NotFound.aspx" />
