--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -9,35 +9,19 @@
   <configSections>
     <section name="openLawOffice" type="OpenLawOffice.Common.Settings.OloSection" />
 
-    <sectionGroup name="elmah">
+    
+  <sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-    </sectionGroup>
-  </configSections>
+    </sectionGroup></configSections>
 
   <openLawOffice>
-    <fileStorage mattersPath="C:\Temp\"
-                 clientsPath="C:\Temp\"
-                 jurisdictionsPath="C:\Temp\"
-                 formsPath="C:\Temp\Forms\"/>
+    <fileStorage mattersPath="C:\Temp\" clientsPath="C:\Temp\" jurisdictionsPath="C:\Temp\" formsPath="C:\Temp\Forms\" />
 
     <!-- If you look here for my email, you won't get me, I never check this.-->
-    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com"
-            passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com"
-            websiteUrl="http://localhost:62914/"
-            office365AuthEndpoint=""
-            office365TokenEndpoint=""
-            office365ClientId=""
-            office365ClientKey=""
-            billingFirmName="Nodine Legal, LLC"
-            billingFirmAddress="PO Box 1125"
-            billingFirmCity="Parsons"
-            billingFirmState="KS"
-            billingFirmZip="67357"
-            billingFirmPhone="(620) 717-7668"
-            billingFirmWeb="www.nodinelegal.com">
+    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com" passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" websiteUrl="http://localhost:62914/" office365AuthEndpoint="" office365TokenEndpoint="" office365ClientId="" office365ClientKey="" billingFirmName="Nodine Legal, LLC" billingFirmAddress="PO Box 1125" billingFirmCity="Parsons" billingFirmState="KS" billingFirmZip="67357" billingFirmPhone="(620) 717-7668" billingFirmWeb="www.nodinelegal.com">
       <globalTaskTagFilters>
         <tagFilter name="tag1" category="Active" tag="Yes" />
       </globalTaskTagFilters>
@@ -47,7 +31,17 @@
   <connectionStrings>
     <add name="Postgres" providerName="Npgsql" connectionString="server=localhost;Port=5432;Database=olo_1;User Id=postgres;Password=postgres;" />
   </connectionStrings>
-
+  
+  <appSettings>
+    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="PreserveLoginUrl" value="true" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="enableSimpleMembership" value="false" />
+    <add key="autoFormsAuthentication" value="false" />    
+  </appSettings>
+  
   <system.data>
     <DbProviderFactories>
       <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql Server" type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.6.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
@@ -66,13 +60,8 @@
   <system.web>
     <trace enabled="true" requestLimit="40" localOnly="false" />
     <customErrors mode="Off" />
-    <compilation debug="true" targetFramework="4.0">
-      <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
 
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
@@ -112,18 +101,20 @@
 
     <pages>
       <namespaces>
+        <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-    <httpModules>
+    
+  <httpModules>
       <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
-    </httpModules>
-  </system.web>
+    </httpModules></system.web>
   
   <system.diagnostics>
     <trace>
@@ -138,65 +129,73 @@
   <system.webServer>
 
     <modules runAllManagedModulesForAllRequests="true">
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
-      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
-    </modules>
-    <validation validateIntegratedModeConfiguration="false" />
-  </system.webServer>
+      
+      
+      
+    <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /></modules>
+    
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  <validation validateIntegratedModeConfiguration="false" /></system.webServer>
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.1.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.28.0" newVersion="2.2.28.0" />
+        <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebMatrix.WebData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
-  <!-- When targeting ASP.NET MVC 3, this assemblyBinding makes MVC 1 and 2 references relink
-		     to MVC 3 so libraries such as DotNetOpenAuth that compile against MVC 1 will work with it.
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-		 --></runtime>
+	</runtime>
 
   <elmah>
     <!--
         See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
         more information on remote access and securing ELMAH.
     -->
-    <security allowRemoteAccess="false" />
+    
     <errorLog type="Elmah.PgsqlErrorLog, Elmah" connectionStringName="Postgres" />
+    <security allowRemoteAccess="false" />
   </elmah>
-  <location path="elmah.axd" inheritInChildApplications="false">
+  
+<location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
       </httpHandlers>
-      <!--
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
-        more information on using ASP.NET authorization securing ELMAH.
-
-      <authorization>
-        <allow roles="admin" />
-        <deny users="*" />
-      </authorization>
-      -->
     </system.web>
     <system.webServer>
       <handlers>
         <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
       </handlers>
     </system.webServer>
-  </location>
-</configuration>
+  </location></configuration>
