--- a/OpenLawOffice.WebClient/packages.config
+++ b/OpenLawOffice.WebClient/packages.config
@@ -1,10 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="3.2.1" targetFramework="net40" />
-  <package id="DotNetZip" version="1.9.2" targetFramework="net40" />
-  <package id="elmah" version="1.2.2" targetFramework="net40" />
-  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
-  <package id="elmah.postgresql" version="1.2" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net40" />
-  <package id="Npgsql" version="2.1.3" targetFramework="net40" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
+  <package id="elmah" version="1.2.2" targetFramework="net45" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="elmah.postgresql" version="1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Npgsql" version="2.2.5" targetFramework="net45" />
+  <package id="pgProvider" version="1.8" targetFramework="net45" />
 </packages>
