Additional work on migrating to newer MVC and framework releases.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ OpenLawOffice.WinClient
 OpenLawOffice.Server
 
 /OpenLawOffice.WebClient/OpenLawOffice.WebClient.Publish.xml
+/OpenLawOffice.WebClient/Properties/PublishProfiles
