--- a/OpenLawOffice.WebClient/packages.config
+++ b/OpenLawOffice.WebClient/packages.config
@@ -3,6 +3,7 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging" version="3.1.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.1.0" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
@@ -13,6 +14,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Npgsql" version="2.2.5" targetFramework="net45" />
