--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -18,10 +18,27 @@
     </sectionGroup></configSections>
 
   <openLawOffice>
-    <fileStorage mattersPath="C:\Temp\" clientsPath="C:\Temp\" jurisdictionsPath="C:\Temp\" formsPath="C:\Temp\Forms\" />
+    <fileStorage mattersPath="C:\Temp\" 
+                 clientsPath="C:\Temp\" 
+                 jurisdictionsPath="C:\Temp\" 
+                 formsPath="C:\Temp\Forms\" />
 
     <!-- If you look here for my email, you won't get me, I never check this.-->
-    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com" passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" websiteUrl="http://localhost:62914/" office365AuthEndpoint="" office365TokenEndpoint="" office365ClientId="" office365ClientKey="" billingFirmName="Nodine Legal, LLC" billingFirmAddress="PO Box 1125" billingFirmCity="Parsons" billingFirmState="KS" billingFirmZip="67357" billingFirmPhone="(620) 717-7668" billingFirmWeb="www.nodinelegal.com">
+    <system timezone="Central Standard Time" 
+            adminEmail="lucas_nodine_01@hotmail.com" 
+            passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" 
+            websiteUrl="http://localhost:62914/" 
+            office365AuthEndpoint="" 
+            office365TokenEndpoint="" 
+            office365ClientId="" 
+            office365ClientKey="" 
+            billingFirmName="Nodine Legal, LLC" 
+            billingFirmAddress="PO Box 1125" 
+            billingFirmCity="Parsons" 
+            billingFirmState="KS" 
+            billingFirmZip="67357" 
+            billingFirmPhone="(620) 717-7668" 
+            billingFirmWeb="www.nodinelegal.com">
       <globalTaskTagFilters>
         <tagFilter name="tag1" category="Active" tag="Yes" />
       </globalTaskTagFilters>
