--- a/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
+++ b/OpenLawOffice.WebClient/OpenLawOffice.WebClient.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Controllers\TaskResponsibleUsersController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Controllers\TaskTagsController.cs" />
+    <Compile Include="Controllers\TaskTemplatesController.cs" />
     <Compile Include="Controllers\TaskTimeController.cs" />
     <Compile Include="Controllers\TimingController.cs" />
     <Compile Include="Controllers\UserTaskSettingsController.cs" />
@@ -286,6 +287,7 @@
     <Compile Include="ViewModels\Tasks\TaskTagViewModel.cs" />
     <Compile Include="ViewModels\Tasks\TaskTimeViewModel.cs" />
     <Compile Include="ViewModels\Tasks\TaskViewModel.cs" />
+    <Compile Include="ViewModels\Tasks\TaskTemplateViewModel.cs" />
     <Compile Include="ViewModels\Timing\DayViewModel.cs" />
     <Compile Include="ViewModels\Timing\TimeViewModel.cs" />
     <Compile Include="ViewModels\ValidatePasswordLengthAttribute.cs" />
@@ -529,6 +531,11 @@
     <Content Include="Views\TaskTags\Delete.aspx" />
     <Content Include="Views\TaskTags\Details.aspx" />
     <Content Include="Views\TaskTags\Edit.aspx" />
+    <Content Include="Views\TaskTemplates\Create.aspx" />
+    <Content Include="Views\TaskTemplates\Delete.aspx" />
+    <Content Include="Views\TaskTemplates\Details.aspx" />
+    <Content Include="Views\TaskTemplates\Edit.aspx" />
+    <Content Include="Views\TaskTemplates\Index.aspx" />
     <Content Include="Views\TaskTime\AssignFastTime.aspx" />
     <Content Include="Views\TaskTime\Create.aspx" />
     <Content Include="Views\TaskTime\RelateTask.aspx" />
@@ -556,9 +563,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
