Implemented encryption for external applications to encrypt passwords sent using the AuthPackage class to authenticate.

--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -107,6 +107,7 @@
         <add name="ContactId" />
         <add name="Office365AccessToken" />
         <add name="Office365RefreshToken" />
+        <add name="ExternalAppKey" />
       </properties>
     </profile>
     <sessionState mode="Custom" customProvider="PgSessionStateStoreProvider">
