Updated to Visual Studio 2015

--- a/OpenLawOffice.WebClient/Web.config
+++ b/OpenLawOffice.WebClient/Web.config
@@ -10,7 +10,10 @@
     <section name="openLawOffice" type="OpenLawOffice.Common.Settings.OloSection" />
 
     
-  <sectionGroup name="elmah">
+  <sectionGroup name="dotNetOpenAuth" type="DotNetOpenAuth.Configuration.DotNetOpenAuthSection, DotNetOpenAuth.Core">
+			<section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+			<section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
+		</sectionGroup><sectionGroup name="elmah">
       <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
       <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
@@ -18,27 +21,10 @@
     </sectionGroup></configSections>
 
   <openLawOffice>
-    <fileStorage mattersPath="C:\Temp\" 
-                 clientsPath="C:\Temp\" 
-                 jurisdictionsPath="C:\Temp\" 
-                 formsPath="C:\Temp\Forms\" />
+    <fileStorage mattersPath="C:\Temp\" clientsPath="C:\Temp\" jurisdictionsPath="C:\Temp\" formsPath="C:\Temp\Forms\" />
 
     <!-- If you look here for my email, you won't get me, I never check this.-->
-    <system timezone="Central Standard Time" 
-            adminEmail="lucas_nodine_01@hotmail.com" 
-            passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" 
-            websiteUrl="http://localhost:62914/" 
-            office365AuthEndpoint="" 
-            office365TokenEndpoint="" 
-            office365ClientId="" 
-            office365ClientKey="" 
-            billingFirmName="Nodine Legal, LLC" 
-            billingFirmAddress="PO Box 1125" 
-            billingFirmCity="Parsons" 
-            billingFirmState="KS" 
-            billingFirmZip="67357" 
-            billingFirmPhone="(620) 717-7668" 
-            billingFirmWeb="www.nodinelegal.com">
+    <system timezone="Central Standard Time" adminEmail="lucas_nodine_01@hotmail.com" passwordRetrievalFromEmail="lucas_nodine_01@hotmail.com" websiteUrl="http://localhost:62914/" office365AuthEndpoint="" office365TokenEndpoint="" office365ClientId="" office365ClientKey="" billingFirmName="Nodine Legal, LLC" billingFirmAddress="PO Box 1125" billingFirmCity="Parsons" billingFirmState="KS" billingFirmZip="67357" billingFirmPhone="(620) 717-7668" billingFirmWeb="www.nodinelegal.com">
       <globalTaskTagFilters>
         <tagFilter name="tag1" category="Active" tag="Yes" />
       </globalTaskTagFilters>
@@ -72,7 +58,12 @@
         <network host="smtp.gmail.com" port="587" enableSsl="true" defaultCredentials="false" userName="x" password="x" />
       </smtp>
     </mailSettings>
-  </system.net>
+  <defaultProxy enabled="true" /><settings>
+			<!-- This setting causes .NET to check certificate revocation lists (CRL) 
+			     before trusting HTTPS certificates.  But this setting tends to not 
+			     be allowed in shared hosting environments. -->
+			<!--<servicePointManager checkCertificateRevocationList="true"/>-->
+		</settings></system.net>
   
   <system.web>
     <trace enabled="true" requestLimit="40" localOnly="false" />
@@ -165,24 +156,12 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Npgsql" publicKeyToken="5d8b90d52f46fda7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.3.0" newVersion="3.0.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="DotNetOpenAuth.Core" publicKeyToken="2780ccd10d57b246" culture="neutral" />
@@ -192,24 +171,63 @@
         <assemblyIdentity name="WebMatrix.WebData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging.Core" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
-	</runtime>
+	<!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). --><legacyHMACWarning enabled="0" /></runtime>
 
   <elmah>
-    <!--
-        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for
+  <!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
         more information on remote access and securing ELMAH.
     -->
-    
-    <errorLog type="Elmah.PgsqlErrorLog, Elmah" connectionStringName="Postgres" />
     <security allowRemoteAccess="false" />
+    <errorLog type="Elmah.PgsqlErrorLog, Elmah" connectionStringName="Postgres" />
   </elmah>
   
-<location path="elmah.axd" inheritInChildApplications="false">
+<dotNetOpenAuth>
+		<messaging>
+			<untrustedWebRequest>
+				<whitelistHosts>
+					<!-- Uncomment to enable communication with localhost (should generally not activate in production!) -->
+					<!--<add name="localhost" />-->
+				</whitelistHosts>
+			</untrustedWebRequest>
+		</messaging>
+		<!-- Allow DotNetOpenAuth to publish usage statistics to library authors to improve the library. -->
+		<reporting enabled="true" />
+	</dotNetOpenAuth><location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
       </httpHandlers>
+      <!-- 
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on using ASP.NET authorization securing ELMAH.
+
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />  
+      </authorization>
+      -->  
     </system.web>
     <system.webServer>
       <handlers>
